Add court order editor; openrightsgroup/blocked-org-uk#139

--- a/BlockedFrontend/templates/admin/courtorders.html
+++ b/BlockedFrontend/templates/admin/courtorders.html
@@ -27,7 +27,7 @@
             </tr>
 {% for judgment in judgments %}
     <tr>
-        <td>{{judgment.name}}</td>
+        <td><a href="{{url_for('.courtorders_view', id=judgment.id)}}">{{judgment.name}}</a></td>
         <td>{{judgment.date}}</td>
         <td>
         <a href="{{ url_for('.courtorders_edit', id=judgment.id)}}" class="btn btn-primary btn-sm">
