Add site grouping; openrightsgroup/blocked-org-uk#139

--- a/BlockedFrontend/templates/admin/courtorders_edit.html
+++ b/BlockedFrontend/templates/admin/courtorders_edit.html
@@ -83,7 +83,7 @@
       {{ forms.check_field(isp, 'applies', isp) }}
         </div>
         <div class="col-md-9">
-      {{ forms.text_field('Injunction URL', 'applies_url', '') }}
+      {{ forms.text_field('Court order URL', 'applies_url', '') }}
         </div>
       {% endif %}
   {% endfor %}
