Relabel fields, rename court orders admin openrightsgroup/blocked-org-uk#139

--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -27,7 +27,7 @@
           <li class=""><a href="/control">Home</a></li>
           <li class=""><a href="{{ url_for('.users') }}">Users</a></li>
           <li class=""><a href="{{ url_for('.ispreports') }}">ISP Reports</a></li>
-          <li class=""><a href="{{ url_for('.courtorders') }}">Court Orders</a></li>
+          <li class=""><a href="{{ url_for('.courtorders') }}">Legal Requests</a></li>
           <li class=""><a href="{{ url_for('.savedlists') }}">Saved Lists</a></li>
           <li class=""><a href="{{ url_for('.blacklist_select') }}">Domain Blacklist</a></li>
           <li class=""><a href="{{url_for('.logout')}}" class="">Log out</a></li>
