--- a/BlockedFrontend/templates/admin/courtorders.html
+++ b/BlockedFrontend/templates/admin/courtorders.html
@@ -2,7 +2,7 @@
 {% import "paging.part.html" as paging %}
 {% import "forms.part.html" as forms %}
 
-{% set pagetitle = "Court Order Admin" %}
+{% set pagetitle = "Legal Requests Admin" %}
 
 {% block body %}
 <div class="row">
