switch between network and injunction for gb/eu (bugfix); openrightsgroup/blocked-org-uk#253

--- a/BlockedFrontend/templates/cms/legal-blocks.html
+++ b/BlockedFrontend/templates/cms/legal-blocks.html
@@ -43,7 +43,7 @@ padding-left: 1.5em !important;
 </div>
 </div>
 
-{% if config['SITE-THEME'] == 'gb' %}
+{% if config['SITE_THEME'] == 'gb' %}
 {{ table_courtorders(blocks) }}
 {% else %}
 {{ table_urllist(blocks) }}
