add affected sites text to index page; openrightsgroup/blocked-org-uk#139

--- a/BlockedFrontend/templates/admin/courtorders.html
+++ b/BlockedFrontend/templates/admin/courtorders.html
@@ -27,7 +27,10 @@
             </tr>
 {% for judgment in judgments %}
     <tr>
-        <td><a href="{{url_for('.courtorders_view', id=judgment.id)}}">{{judgment.name}}</a></td>
+        <td>
+            <a href="{{url_for('.courtorders_view', id=judgment.id)}}">{{judgment.name}}</a>
+            <div>{{ judgment.sites_description|null|safe }}</div>
+        </td>
         <td>{{judgment.date}}</td>
         <td>
         <a href="{{ url_for('.courtorders_edit', id=judgment.id)}}" class="btn btn-primary btn-sm">
