--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -27,7 +27,14 @@
           <li class=""><a href="/control">Home</a></li>
           <li class=""><a href="{{ url_for('.users') }}">Users</a></li>
           <li class=""><a href="{{ url_for('.ispreports') }}">ISP Reports</a></li>
-          <li class=""><a href="{{ url_for('.courtorders') }}">Legal Requests</a></li>
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Legal Requests <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                  <li><a href="{{ url_for('.courtorders') }}">Admin</a></li>
+                  <li><a href="{{ url_for('.courtorders_group_import') }}">Import URL Groups</a></li>
+              </ul>
+
+          </li>
           <li class=""><a href="{{ url_for('.savedlists') }}">Saved Lists</a></li>
           <li class=""><a href="{{ url_for('.blacklist_select') }}">Domain Blacklist</a></li>
           <li class=""><a href="{{url_for('.logout')}}" class="">Log out</a></li>
